[project]
name = "hangar-tui"
version = "0.1.0"
description = "Terminal UI for navigating and managing projects in Hangar workspace"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
]

[project.scripts]
hangar = "hangar_tui.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
